--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
+    "datatables.net-dt": "^1.13.1",
+    "jquery": "^3.6.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +41,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.30.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.31.11",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
